# ai-backtest-engine

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
ai_analysis/: __init__.py  performance_analyzer.py  visualization.py
config/: broker.py  data_splits.json  settings.py
data/: mt5_extractor.py
data/processed/test/: BTCUSD_D1.pkl  BTCUSD_H1.pkl  BTCUSD_H4.pkl  BTCUSD_M15.pkl  BTCUSD_M30.pkl  BTCUSD_M5.pkl
data/processed/train/: BTCUSD_D1.pkl  BTCUSD_H1.pkl  BTCUSD_H4.pkl  BTCUSD_M15.pkl  BTCUSD_M30.pkl  BTCUSD_M5.pkl
data/processed/validation/: BTCUSD_D1.pkl  BTCUSD_H1.pkl  BTCUSD_H4.pkl  BTCUSD_M15.pkl  BTCUSD_M30.pkl  BTCUSD_M5.pkl
data/raw/: BTCUSD_D1.pkl  BTCUSD_H1.pkl  BTCUSD_H4.pkl  BTCUSD_M15.pkl  BTCUSD_M30.pkl  BTCUSD_M5.pkl
engine/: backtester.py  costs.py  dedup.py  portfolio.py  trade.py  validator.py
indicators/: compute.py
ml_models/: __init__.py  deep_learning.py  feature_engineering.py  model_training.py  prediction_engine.py
notebooks/: 01_data_exploration.py  02_feature_engineering.py  03_model_training.py
optimizer/: combined_validator.py  combo_optimizer.py  exit_optimizer.py  final_oos_tester.py  param_optimizer.py  report_generator.py  validation_tester.py
reports/: all_approved_trades.csv  all_approved_trades_v2.csv  monte_carlo_summary.csv  monte_carlo_summary_v2.csv  monthly_returns.csv  monthly_returns_v2.csv  regime_analysis.csv  regime_analysis_v2.csv  strategy_rankings.csv  strategy_rankings_v2.csv
scripts/: run_phase10.py  run_phase11.py  run_phase12.py  run_phase13.py  run_phase14.py  run_phase17.py  run_phase5.py  run_phase6.py  run_phase8.py
strategies/: base.py  loader.py  registry.py
tests/: test_phase1.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase8.py  test_phase9.py
