[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-backtest-engine"
version = "1.0.0"
description = "AI-powered backtesting engine with ML signal generation and deep learning prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Arash", email = "arashsadeghzadehmanagement@gmail.com"},
]
keywords = [
    "backtesting",
    "algorithmic-trading",
    "machine-learning",
    "deep-learning",
    "quantitative-finance",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "matplotlib>=3.6.0",
    "scipy>=1.10.0",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
deep-learning = ["tensorflow>=2.12.0"]
optimization = ["optuna>=3.1.0"]
visualization = ["seaborn>=0.12.0", "plotly>=5.13.0"]
notebooks = ["jupyter>=1.0.0", "ipykernel>=6.20.0"]
dev = ["pytest>=7.2.0", "pytest-cov>=4.0.0"]
all = [
    "tensorflow>=2.12.0",
    "optuna>=3.1.0",
    "seaborn>=0.12.0",
    "plotly>=5.13.0",
    "jupyter>=1.0.0",
    "pytest>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/ARASH3280ARASH/ai-backtest-engine"
Repository = "https://github.com/ARASH3280ARASH/ai-backtest-engine"
Issues = "https://github.com/ARASH3280ARASH/ai-backtest-engine/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["engine*", "strategies*", "indicators*", "ml_models*", "ai_analysis*", "config*"]
